@@ -5,10 +5,12 @@ nobase_toolbox2_PYTHON = \
 	action/__init__.py \
 	action/extract/__init__.py \
 	action/extract/kttoolbox_extract.py \
+	action/extract/videoparser_extract.py \
 	action/rewrap/__init__.py \
 	action/rewrap/manzanita_rewrap.py \
 	action/transcode/__init__.py \
 	worker/__init__.py \
 	worker/ffmpeg.py \
 	worker/kttoolbox.py \
-	worker/manzanita.py
+	worker/manzanita.py \
+	worker/videoparser.py
