@@ -1,8 +1,8 @@
 python-toolbox2 (0.3.0~dev-1) unstable; urgency=low
 
-  * New upstream release.
+  * New upstream release, closes: #5365.
 
- -- Matthieu Bouron <matthieu.bouron@smartjog.com>  Tue, 03 Jan 2012 16:02:38 +0100
+ -- Matthieu Bouron <matthieu.bouron@smartjog.com>  Thu, 05 Jan 2012 18:15:27 +0100
 
 python-toolbox2 (0.2.0-1) unstable; urgency=low
 
