@@ -4,6 +4,7 @@ Version 0.3.0~dev
 	* Add callback method to action API, refs: #5365.
 	* Call user action callback with progress information and
 	  action information, closes: #5365.
+	* Add videoparser_extract action, closes: #5365.
 
 Version 0.2.0 Released on 2011/11/22
 
